tests/negative/typechecker_bad8.sp
(* Invalid == operation *)

Var: String = "Hello";

main: Int () {

    a: String = "Hello, " == 42.;

    return 0;
}